[gd_scene load_steps=29 format=3 uid="uid://da17marj47fag"]

[ext_resource type="Script" path="res://scripts/base_card.gd" id="1_7fa4b"]
[ext_resource type="Texture2D" uid="uid://dsc4ctoghsq4v" path="res://assets/Card flip animation.png" id="2_5nag8"]
[ext_resource type="Texture2D" uid="uid://nu7hxn6qq4sw" path="res://assets/Card.png" id="3_7sncv"]
[ext_resource type="Texture2D" uid="uid://2re66trjpqqu" path="res://assets/Card flip Silver animation.png" id="4_ffiwb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_27ybb"]
atlas = ExtResource("2_5nag8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5rs4"]
atlas = ExtResource("2_5nag8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yt10"]
atlas = ExtResource("2_5nag8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ah01"]
atlas = ExtResource("2_5nag8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ergcs"]
atlas = ExtResource("2_5nag8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1b6a"]
atlas = ExtResource("2_5nag8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt04f"]
atlas = ExtResource("2_5nag8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhi8y"]
atlas = ExtResource("3_7sncv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y42k"]
atlas = ExtResource("4_ffiwb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85qvq"]
atlas = ExtResource("4_ffiwb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nw07"]
atlas = ExtResource("4_ffiwb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl5jm"]
atlas = ExtResource("4_ffiwb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvycs"]
atlas = ExtResource("4_ffiwb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ma3k"]
atlas = ExtResource("4_ffiwb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i01o"]
atlas = ExtResource("4_ffiwb")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8arc7"]
atlas = ExtResource("4_ffiwb")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw0r6"]
atlas = ExtResource("4_ffiwb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxf7u"]
atlas = ExtResource("4_ffiwb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmfm8"]
atlas = ExtResource("4_ffiwb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cc81"]
atlas = ExtResource("4_ffiwb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpsa6"]
atlas = ExtResource("4_ffiwb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1eo4"]
atlas = ExtResource("4_ffiwb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2cxw4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27ybb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5rs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yt10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ah01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ergcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1b6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt04f")
}],
"loop": true,
"name": &"flipping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhi8y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y42k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85qvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nw07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl5jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvycs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ma3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i01o")
}],
"loop": false,
"name": &"silver_flip_in",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8arc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw0r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxf7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmfm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cc81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpsa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1eo4")
}],
"loop": false,
"name": &"silver_flip_out",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_340u0"]
size = Vector2(20, 28)

[node name="empty_card" type="Node2D"]
script = ExtResource("1_7fa4b")
size_scale = null

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2cxw4")
animation = &"silver_flip_out"
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_340u0")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
